@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-admin.in,v 1.8 2004/02/18 22:01:25 shiro Exp $
+;; $Id: kahua-admin.in,v 1.9 2004/02/22 12:05:31 tahara Exp $
 
 (use srfi-1)
 (use gauche.net)
@@ -33,7 +33,8 @@
               (case (car cmd)
                 ((help)
                  (let ((spvr-help (send-command #f cmd))
-                       (admin-help '(connect cvs adduser deluser lsuser)))
+                       (admin-help '(connect cvs adduser deluser lsuser
+                                     plugin)))
                    (write (append spvr-help admin-help)) (newline)
                    (spvr-command-processor)))
                 ((connect)
@@ -49,6 +50,7 @@
                 ((adduser)
                  (if (= (length cmd) 3)
                      (let ((name (symbol->string (cadr cmd)))
+
                            (pw (symbol->string (caddr cmd))))
                        (kahua-add-developer name pw)
                        (write 'done) (newline)
@@ -65,6 +67,9 @@
                             spvr-command-processor)))
                 ((lsuser)
                  (write (kahua-list-developer)) (newline)
+                 spvr-command-processor)
+                ((plugin)
+                 (plugin-command (cdr cmd))
                  spvr-command-processor)
                 (else
                  (let1 reply (send-command #f cmd)
@@ -161,11 +166,46 @@
 		 (if (pair? wtype)
 		     (reload-worker-files (car wtype))
 		     (reload-worker-files #f)))
-	       (display "unkown type or has not checkouted\n")))
+	       (display "unknown type or has not checkouted\n")))
 	  (else
-	   (display "unkown cvs command. Usage: update worker-type\n")))
+	   (display "unknown cvs command. Usage: update worker-type\n")))
 	spvr-command-processor))
 
+;; Deal with plugin command ------------------------------------
+
+(define (plugin-command cmd)
+  (define (show-plugin wid)
+    (let* ((reply (send-command wid '(all-plugins)))
+           (plugins (sort
+                    (read-from-string (caddr reply))
+                    (lambda (x y) (string<? (car x) (car y))))))
+      (format #t "name                 version\n")
+      (dolist (p plugins)
+              (format #t "~20a ~a\n"
+                      (car p)
+                      (cdr p)))
+      ))
+  (let* ((workers (or (send-command #f '(ls)) (error "No worker found")))
+         (wid (get-keyword :worker-id
+                           (if (null? cmd)
+                               (car workers)
+                               (or (find (lambda (w)
+                                           (eqv? (get-keyword :worker-count w)
+                                                 (car (reverse cmd))))
+                                         workers)
+                                   (error "No such worker" (car cmd)))))))
+    (cond ((<= (length cmd) 1)
+           ;; show plugin list
+           (show-plugin wid))
+          ((and (= (length cmd) 2)
+                (equal? (car cmd) 'reload))
+           ;; reload plugins
+           (send-command wid '(initialize-plugins))
+           (format #t "plugin reloaded: ~a\n" (cadr cmd))
+           (show-plugin wid))
+          (else (error "unknown plugin command" cmd)))
+    ))
+                
 ;; Utility -----------------------------------------------------
 (define (send-command wid cmd)
   (let ((sockaddr (worker-id->sockaddr wid (kahua-sockbase))))
